Navigation panel update

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <noscript>
-      <strong>Включите JavaScript.</strong>
+      <strong>Включите JavaScript</strong>
     </noscript>
     <div id="app"></div>
   </body>
